--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,13 +19,16 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: '20'
+          cache: 'npm'
           
       - name: Install Dependencies
-        run: npm ci
+        run: npm install
         
       - name: Build Project
         run: npm run build
+        env:
+          NEXT_PUBLIC_BASE_PATH: /Corsica-Luxury-Rentals
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
