--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build Project
         run: npm run build
         env:
-          NEXT_PUBLIC_BASE_PATH: /Corsica-Luxury-Rentals
+          NODE_ENV: production
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
